# fastq-detangler

./: .flake8  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  pr-checks.yml
fastq_detangler/: __init__.py  __main__.py  fastq_detangler.py
tests/: __init__.py  test_fastq_detangler.py
tests/test_data/: R1_ordered_with_missing_R2.fastq  R1_paired.fastq  R2_ordered_with_missing_R1.fastq  R2_paired.fastq  interweaved.fastq
